--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "dayjs": "^1.11.13",
     "expo": "~52.0.4",
     "expo-status-bar": "~2.0.0",
+    "modal": "^1.2.0",
     "react": "18.3.1",
-    "react-native": "0.76.1",
+    "react-native": "^0.76.1",
     "react-native-mmkv": "^3.1.0",
     "react-native-uuid": "^2.0.3",
     "react-redux": "^9.1.2",
@@ -24,7 +25,8 @@
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/uuid": "^10.0.0"
   },
   "private": true
 }
